# hk_warrant_monitor

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
config/: settings.toml
src/hk_warrant_monitor/: main.py
src/hk_warrant_monitor/ai/: analysis_service.py  deepseek_service.py
src/hk_warrant_monitor/core/: enums.py  models.py  time_utils.py
src/hk_warrant_monitor/data_sources/: futu_client.py  mock_client.py
src/hk_warrant_monitor/indicators/: calculator.py
src/hk_warrant_monitor/infra/: config_loader.py  database.py  logger.py
src/hk_warrant_monitor/jobs/: intraday_scan_job.py
src/hk_warrant_monitor/notifications/: feishu_client.py  push_service.py
src/hk_warrant_monitor/products/: filter.py
src/hk_warrant_monitor/strategy/: position_engine.py  signal_engine.py  trend_engine.py
src/hk_warrant_monitor/watchlist/: position_service.py  service.py
src/hk_warrant_monitor/web/: __init__.py  server.py
src/hk_warrant_monitor/web/static/: app.js  index.html  styles.css
tests/: test_core_flow.py
