[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hk-warrant-monitor"
version = "0.1.0"
description = "HK stock warrant and CBBC AI-assisted trading monitor"
requires-python = ">=3.11"
dependencies = [
  "futu-api>=6.0.0",
  "numpy>=1.24.0",
  "pandas>=1.5.0",
  "requests>=2.31.0",
]

[project.scripts]
hk-warrant-monitor = "hk_warrant_monitor.main:main"

[tool.setuptools.packages.find]
where = ["src"]
